Data, Tags and Input
* Added new Data to the Card List
* Added an Input to the Card List
* Added tags to the HTML of card-list

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,7 @@
     <header>
       <h1>Magic the Gathering Cards Library</h1>
     </header>
+    <app-card-list></app-card-list>
     <div class="container">
       <div *ngFor = "let card of cardList">
         <!-- I'm going to create a div within this div so that I can use the card data to make the class and use it for CSS to color dynamically.
