--- a/src/app/card-list/card-list.component.html
+++ b/src/app/card-list/card-list.component.html
@@ -1,1 +1,5 @@
 <p>card-list works!</p>
+<app-card-list></app-card-list>
+<app-card-list></app-card-list>
+<app-card-list></app-card-list>
+<app-card-list></app-card-list>
