Full Router Support
* The program now fully supports routing.
* Clicking on a card now focuses that card
* Added a basic nav menu

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,11 @@
     <header>
       <h1>Magic the Gathering Cards Library</h1>
     </header>
+    <nav>
+      <a routerLink="/cards" routerLinkActive="active">Card List</a>
+      <a routerLink="/modify-card" routerLinkActive="active">Modify Card</a>
+    </nav>
+    <router-outlet></router-outlet>
     <footer>
       <h2>Made By Malakhi Lemieux-Belanger</h2>
     </footer>
