--- a/src/app/card-list-item/card-list-item.component.html
+++ b/src/app/card-list-item/card-list-item.component.html
@@ -1,6 +1,6 @@
 <div id="{{even?'even':'odd'}}" class="container">
   <div>
-    <img ngSrc="{{card.src}}" alt="{{card.name}}" width="256" height="357"/>
+    <img ngSrc="{{card.src}}" width="256" height="357" alt="{{card.name}}"/>
   </div>
   <div>
     <h2>{{card.name}}</h2>
