--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,1 +1,3 @@
-<p>page-not-found works!</p>
+<h1>The page you looked for wasn't found!</h1>
+<p>Try having this cookie while we prepare it..</p>
+<p><a routerLink="/cards" routerLinkActive="active">Back to safety!</a></p>
